--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <h1>Hey, Salouma! ❤️</h1>
-    <p id="love-message">I love you more than words can say!</p>
-    <button onclick="showMessage()">Click for a Surprise 💌</button>
-</div>
+<head>
+    <title>Salouma Love Message</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+</head>
